[package]
name = "fill-fonts"
description = "Web event wrappers"
version = "0.1.3"
authors = ["Aster <192608617@qq.com>"]
keywords = ["wasm"]
categories = ["wasm", "web-programming"]
homepage = "https://github.com/oovm/web-event"
repository = "https://github.com/oovm/web-event"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
font-kit = "0.11.0"
