[package]
name = "fill-fonts"
description = "Fill font in single image"
version = "0.1.3"
authors = ["Aster <192608617@qq.com>"]
keywords = ["font", "render"]
categories = ["font", "web-programming"]
homepage = "https://github.com/oovm/web-event"
repository = "https://github.com/oovm/web-event"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#pathfinder_geometry = "0.5.1"
fontdue = "0.7.2"
image = "0.24.5"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
#video-rs = "0.2.2"
url = "2.3.1"
log = "0.4.17"
#rav1e = "0.6.3"
#gstreamer = "0.20.2"

[dev-dependencies]
font-kit = "0.11.0"
find-target = "0.1.1"