[package]
name = "image-av1"
description = "Encode images to av1 video."
version = "0.1.3"
authors = ["Aster <192608617@qq.com>"]
keywords = ["font", "render"]
categories = ["font", "web-programming"]
homepage = "https://github.com/oovm/web-event"
repository = "https://github.com/oovm/web-event"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "0.24.5"
rav1e = "0.6.3"
