[package]
name = "image-av1"
description = "Encode images to av1 video."
version = "0.0.0"
authors = ["Aster <192608617@qq.com>"]
keywords = ["encode", "render"]
categories = ["encode", "encode"]
homepage = "https://github.com/oovm/web-event"
repository = "https://github.com/oovm/web-event"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
image = "0.24.5"
#imageproc = "0.23.0"
rav1e = { version = "0.6.3" }
yuv = "0.1.5"

[features]
default = ["rav1e/unstable"]
parallel = []
