[package]
name = "sycamore-event"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
sycamore = "0.7.1"
web-event = "0.1.1"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage", "MouseEvent", "PointerEvent"]
version = "0.3.55"


